# signal-generator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  dac-dma-timer-raw.cpp  dac-dma-timer.cpp  hw-main.cpp  main.cpp  readme.md  sd-main.cpp
code/: CMakeLists.txt  mbs
code/src/entrypoints/: adc-dac.cpp  adc-dma.cpp  basic-signal-generator.cpp  dac-dma-timer.cpp  dac-example.cpp  hello-world.cpp  signal-generator.cpp  test-adc-sampling.cpp  test-rgb-led.cpp
code/src/shared/Generator/: Generator.cpp  Generator.h
code/src/shared/Parser/: Parser.cpp  Parser.h  parser.y
code/src/shared/Parser/parser/: lexer.c  lexer.h  parser.c  parser.h
code/src/shared/RGBLed/: Colors.h  RGBLed.h
code/src/shared/drivers/ADC/: ADC.cpp  ADC.h
code/src/shared/drivers/DAC/: DAC.cpp  DAC.h
code/src/shared/drivers/DMA/: DMA.cpp  DMA.h
code/src/shared/drivers/spi/: SPIBus.h  SPIDMABus.h  SPITransaction.h
code/src/shared/drivers/timer/: BasicTimer.h  GeneralPurposeTimer.h  TimerUtils.h
code/src/shared/generator/: Generator.cpp  Generator.h
code/src/shared/parser/: Parser.cpp  Parser.h  lexer.l  parser.y  parser_types.h
code/src/shared/parser/parser/: lexer.c  lexer.h  parser.c  parser.h
code/src/shared/utils/: ClockUtils.h  OtherUtils.h
pcb/: #auto_saved_files#  .gitignore  MCU.kicad_sch  Output Stage.kicad_sch  Power.kicad_sch  Signal Generator.kicad_pcb  Signal Generator.kicad_pro  Signal Generator.kicad_sch  USB Connector.kicad_sch  fp-lib-table  sym-lib-table
pcb-library/: Signal Generator Components.kicad_sym
pcb-library/3D Models/: LDK320AM120R.step  SJ-3523-SMT-TR.step  TS972IYQT.step
pcb-library/Signal Generator Components.pretty/: BZT52C10-TP.kicad_mod  IN-PI55QA.kicad_mod  LD39050PU33R.kicad_mod  LDK320AM120R.kicad_mod  LDLN030G33R.kicad_mod  MEM2080-00-128-00-A.kicad_mod  Push Button Switch 7x7mm.kicad_mod  SJ-3523-SMT-TR-1.kicad_mod  TG2520SMN_16.0000M-MCGNNM0.kicad_mod  TLV61048.kicad_mod  TPS61041.kicad_mod  TS972IYQT.kicad_mod  TSH82IDT.kicad_mod  USB4105-GF-A.kicad_mod  XAL4030.kicad_mod
pcb-production/: Signal Generator-B_Cu.gbl  Signal Generator-B_Mask.gbs  Signal Generator-B_Paste.gbp  Signal Generator-B_Silkscreen.gbo  Signal Generator-Edge_Cuts.gm1  Signal Generator-F_Cu.gtl  Signal Generator-F_Mask.gts  Signal Generator-F_Paste.gtp  Signal Generator-F_Silkscreen.gto  Signal Generator-In1_Cu.g2  Signal Generator-In2_Cu.g3  Signal Generator-NPTH-drl_map.gbr  Signal Generator-NPTH.drl  Signal Generator-PTH-drl_map.gbr  Signal Generator-PTH.drl
pcb-simulations/: Output Stage Simulation.kicad_pro  Output Stage Simulation.kicad_sch  Output Stage Simulation.wbk
pcb-simulations/Spice Models/: SN10502.lib
pcb-simulations/Spice Models/TLV61048/: TLV61048.OLB  TLV61048.lib
pcb-simulations/Spice Models/TLV61048/TLV61048-PSpiceFiles/SCHEMATIC1/: SCHEMATIC1.ALS
pcb-simulations/Spice Models/TLV61048/TLV61048-PSpiceFiles/SCHEMATIC1/TR/: TR.mrk  TR.out.1  TR.prb
pcb/Signal Generator/: Signal Generator.kicad_pro  Signal Generator.kicad_sch  USB Plugs.kicad_sch  USB_Plugs.kicad_sch  fp-lib-table  sym-lib-table
pcb/Signal Generator Components/: Signal Generator Components.kicad_sym
pcb/Signal Generator Components/3D Models/: TSH82IDT.step
pcb/Signal Generator Components/Signal Generator Components.pretty/: LDLN030G33R.kicad_mod  TG2520SMN_16.0000M-MCGNNM0.kicad_mod  TS972IYQT.kicad_mod  TSH82IDT.kicad_mod
pcb/production/: Signal Generator-B_Cu.gbl  Signal Generator-B_Mask.gbs  Signal Generator-B_Paste.gbp  Signal Generator-B_Silkscreen.gbo  Signal Generator-Edge_Cuts.gm1  Signal Generator-F_Cu.gtl  Signal Generator-F_Mask.gts  Signal Generator-F_Paste.gtp  Signal Generator-F_Silkscreen.gto  Signal Generator-In1_Cu.g2  Signal Generator-In2_Cu.g3  Signal Generator-NPTH-drl_map.gbr  Signal Generator-NPTH.drl  Signal Generator-PTH-drl_map.gbr  Signal Generator-PTH.drl
pcb/simulations/Spice Models/TLV61048/: TLV61048.opj
pcb/simulations/Spice Models/TLV61048/TLV61048-PSpiceFiles/SCHEMATIC1/: SCHEMATIC1_sch.prp  TR.sim
pcb/simulations/Spice Models/TLV61048/TLV61048-PSpiceFiles/SCHEMATIC1/TR/: TR.1OP  TR.cir  TR.mif
pcb/simulations/Step up/: Step up.kicad_pro
report/: document_settings.tex  main.fdb_latexmk  main.fls  main.tex  makefile  report.tex  report.toc
report/sections/: 1_project_data.tex  2_project_description.tex  3_project_outcomes.tex  4_honor_pledges.tex  honor_pledges.tex  project_data.tex  project_description.tex  project_outcomes.tex
src/: main.cpp
src/entrypoints/: adc-dac.cpp  dac-baremetal.cpp  dac-dma-timer-raw.cpp  dac-dma-timer.cpp  dac-example.cpp  hello-world.cpp  main.cpp  parser.cpp  signal-generator.cpp  test-main.cpp  test-rgb-led.cpp
src/shared/RGBLed/: RGBLed.h
src/shared/drivers/ADC/: ADC.cpp
src/shared/drivers/DAC/: DAC.cpp  DAC.h
src/shared/drivers/DMA/: DMA.cpp  DMA.h
src/shared/drivers/spi/: SPIBus.h  SPIBusInterface.h  SPIDMABus.h  SPIDefs.h  SPIDriver.h  SPITransaction.cpp
src/shared/drivers/timer/: TimerUtils.h
src/shared/parser/: lexer.c  lexer.h  lexer.l  parser.c  parser.h  parser.y  parser_types.h
src/shared/parser/parser/: lexer.c  lexer.h  parser.c  parser.h
src/shared/utils/: OtherUtils.h
